# airbyte-ai-connectors

./: README.md
.github/actions/notification-to-slack/: action.yml  notify_slack.py
.github/workflows/: publish-mcp.yml  publish.yml
airbyte-agent-mcp/: .env.example  CHANGELOG.md  README.md  configured_connectors.yaml.example  pyproject.toml
airbyte-agent-mcp/airbyte_agent_mcp/: connector_manager.py  models.py  registry_client.py  secret_manager.py
airbyte-agent-mcp/tests/: test_connector_manager.py  test_models.py  test_registry_client.py  test_server.py
connectors/asana/: CHANGELOG.md  DOCS.md  README.context.json  README.md  pyproject.toml
connectors/asana/airbyte_ai_asana/: __init__.py  connector.py  connector.yaml  models.py  types.py
connectors/asana/tests/: test_asana_cassettes.py  test_asana_connector.py
connectors/github/: CHANGELOG.md  README.context.json  README.md  pyproject.toml
connectors/github/airbyte_ai_github/: __init__.py  connector.py  connector.yaml  models.py  types.py  types.pyi
connectors/github/airbyte_ai_github/_vendored/connector_sdk/: auth_template.py  types.py
connectors/github/airbyte_ai_github/_vendored/connector_sdk/executor/: models.py
connectors/github/airbyte_ai_github/_vendored/connector_sdk/schema/: extensions.py  operations.py  security.py
connectors/github/tests/: __init__.py  test_github_cassettes.py  test_github_connector.py
connectors/gong/: CHANGELOG.md  DOCS.md  README.context.json  README.md  pyproject.toml
connectors/gong/airbyte_ai_gong/: __init__.py  connector.py  connector.yaml  models.py  types.py  types.pyi
connectors/gong/tests/: test_gong_cassettes.py  (+1 more)
connectors/greenhouse/: CHANGELOG.md  DOCS.md  README.context.json  README.md  pyproject.toml
connectors/hubspot/: CHANGELOG.md  README.md  pyproject.toml
connectors/linear/: CHANGELOG.md  DOCS.md  README.context.json  README.md  pyproject.toml
connectors/stripe/: CHANGELOG.md  DOCS.md  README.context.json  README.md  pyproject.toml
connectors/zendesk-support/: CHANGELOG.md  DOCS.md  README.context.json  README.md  pyproject.toml
mcp/: CHANGELOG.md  pyproject.toml
mcp/airbyte_agent_mcp/: __main__.py  config.py  server.py
mcp/airbyte_agent_mcp/_vendored/connector_sdk/: __init__.py  constants.py  validation.py
mcp/airbyte_agent_mcp/_vendored/connector_sdk/executor/: __init__.py  local_executor.py
mcp/airbyte_agent_mcp/_vendored/connector_sdk/performance/: instrumentation.py
mcp/airbyte_agent_mcp/_vendored/connector_sdk/schema/: __init__.py  base.py  components.py
mcp/airbyte_agent_mcp/_vendored/connector_sdk/telemetry/: __init__.py
mcp/tests/: test_config.py  test_secrets.py
(+111 files in other folders)
